// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner /> should match snapshots 1`] = `
<div
  className="abt-spinner"
  style={
    Object {
      "backgroundColor": "transparent",
    }
  }
>
  <svg
    height="50px"
    viewBox="0 0 66 66"
    width="50px"
  >
    <circle
      cx="33"
      cy="33"
      fill="none"
      r="30"
      strokeLinecap="round"
      strokeWidth="6"
    />
  </svg>
  <style
    jsx={true}
  >
    
                        @keyframes colors {
                            0% {
                                stroke: #4285f4;
                            }
                            25% {
                                stroke: #de3e35;
                            }
                            50% {
                                stroke: #f7c223;
                            }
                            75% {
                                stroke: #1b9a59;
                            }
                            100% {
                                stroke: #4285f4;
                            }
                        }
                        @keyframes dash {
                            0% {
                                stroke-dashoffset: 187;
                            }
                            50% {
                                stroke-dashoffset: 46.75;
                                -webkit-transform: rotate(135deg);
                                transform: rotate(135deg);
                            }
                            100% {
                                stroke-dashoffset: 187;
                                -webkit-transform: rotate(450deg);
                                transform: rotate(450deg);
                            }
                        }
                        @keyframes rotator {
                            0% {
                                -webkit-transform: rotate(0deg);
                                transform: rotate(0deg);
                            }
                            100% {
                                -webkit-transform: rotate(270deg);
                                transform: rotate(270deg);
                            }
                        }
                        .abt-spinner {
                            display: flex;
                            height: 100%;
                            width: 100%;
                            pointer-events: none;
                            align-items: center;
                            justify-content: center;
                        }
                        .abt-spinner_overlay {
                            position: absolute;
                            pointer-events: auto;
                            background: rgba(0, 0, 0, 0.2);
                        }
                        svg {
                            animation: rotator 1.4s linear infinite;
                        }
                        circle {
                            stroke-dasharray: 187;
                            stroke-dashoffset: 0;
                            transform-origin: center;
                            animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
                        }
                    
  </style>
</div>
`;

exports[`<Spinner /> should match snapshots 2`] = `
<div
  className="abt-spinner abt-spinner_overlay"
  style={
    Object {
      "backgroundColor": undefined,
      "height": 100,
      "minHeight": 100,
    }
  }
>
  <svg
    height="100px"
    viewBox="0 0 66 66"
    width="100px"
  >
    <circle
      cx="33"
      cy="33"
      fill="none"
      r="30"
      strokeLinecap="round"
      strokeWidth="6"
    />
  </svg>
  <style
    jsx={true}
  >
    
                        @keyframes colors {
                            0% {
                                stroke: #4285f4;
                            }
                            25% {
                                stroke: #de3e35;
                            }
                            50% {
                                stroke: #f7c223;
                            }
                            75% {
                                stroke: #1b9a59;
                            }
                            100% {
                                stroke: #4285f4;
                            }
                        }
                        @keyframes dash {
                            0% {
                                stroke-dashoffset: 187;
                            }
                            50% {
                                stroke-dashoffset: 46.75;
                                -webkit-transform: rotate(135deg);
                                transform: rotate(135deg);
                            }
                            100% {
                                stroke-dashoffset: 187;
                                -webkit-transform: rotate(450deg);
                                transform: rotate(450deg);
                            }
                        }
                        @keyframes rotator {
                            0% {
                                -webkit-transform: rotate(0deg);
                                transform: rotate(0deg);
                            }
                            100% {
                                -webkit-transform: rotate(270deg);
                                transform: rotate(270deg);
                            }
                        }
                        .abt-spinner {
                            display: flex;
                            height: 100%;
                            width: 100%;
                            pointer-events: none;
                            align-items: center;
                            justify-content: center;
                        }
                        .abt-spinner_overlay {
                            position: absolute;
                            pointer-events: auto;
                            background: rgba(0, 0, 0, 0.2);
                        }
                        svg {
                            animation: rotator 1.4s linear infinite;
                        }
                        circle {
                            stroke-dasharray: 187;
                            stroke-dashoffset: 0;
                            transform-origin: center;
                            animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
                        }
                    
  </style>
</div>
`;

exports[`<Spinner /> should match snapshots 3`] = `
<div
  className="abt-spinner"
  style={
    Object {
      "backgroundColor": "transparent",
      "height": "100px",
      "minHeight": "100px",
    }
  }
>
  <svg
    height="100px"
    viewBox="0 0 66 66"
    width="100px"
  >
    <circle
      cx="33"
      cy="33"
      fill="none"
      r="30"
      strokeLinecap="round"
      strokeWidth="6"
    />
  </svg>
  <style
    jsx={true}
  >
    
                        @keyframes colors {
                            0% {
                                stroke: #4285f4;
                            }
                            25% {
                                stroke: #de3e35;
                            }
                            50% {
                                stroke: #f7c223;
                            }
                            75% {
                                stroke: #1b9a59;
                            }
                            100% {
                                stroke: #4285f4;
                            }
                        }
                        @keyframes dash {
                            0% {
                                stroke-dashoffset: 187;
                            }
                            50% {
                                stroke-dashoffset: 46.75;
                                -webkit-transform: rotate(135deg);
                                transform: rotate(135deg);
                            }
                            100% {
                                stroke-dashoffset: 187;
                                -webkit-transform: rotate(450deg);
                                transform: rotate(450deg);
                            }
                        }
                        @keyframes rotator {
                            0% {
                                -webkit-transform: rotate(0deg);
                                transform: rotate(0deg);
                            }
                            100% {
                                -webkit-transform: rotate(270deg);
                                transform: rotate(270deg);
                            }
                        }
                        .abt-spinner {
                            display: flex;
                            height: 100%;
                            width: 100%;
                            pointer-events: none;
                            align-items: center;
                            justify-content: center;
                        }
                        .abt-spinner_overlay {
                            position: absolute;
                            pointer-events: auto;
                            background: rgba(0, 0, 0, 0.2);
                        }
                        svg {
                            animation: rotator 1.4s linear infinite;
                        }
                        circle {
                            stroke-dasharray: 187;
                            stroke-dashoffset: 0;
                            transform-origin: center;
                            animation: dash 1.4s ease-in-out infinite, colors 5.6s ease-in-out infinite;
                        }
                    
  </style>
</div>
`;
